# pddl_ros_tutorial

./: CMakeLists.txt  package.xml
pddl_scripts/domain/: 2_htn_block_domain.pddl
pddl_scripts/problem/: 2_htn_block_problem.pddl
scripts/: main.py  test_htn.py  test_pddl.py
scripts/information_extraction/: htn_information_extraction.py
scripts/pddl_parser/: hddl_parser.py  parser.py  pddl_parser.py
src/: main.cpp
test/test_launch/test_python_ros/: test_minimal_ros.py
test/test_python/: test_hddl_parser.py  test_minimal.py  test_pddl_parser.py
